--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,6 @@ body{
     width: 100%;
     
 }
-
-
-
 .navbar span{
     color: #c40007;
 }
@@ -29,11 +26,7 @@ body{
     justify-content: center;
     align-items: center;
     color: white;
-    
-
 }
-
-
 .main{
     display: flex;
     flex-direction: column;
@@ -41,7 +34,6 @@ body{
     position: absolute;
     left: 5%;
 }
-
 #home::before{
     content: "";
     position: absolute;
@@ -53,14 +45,12 @@ body{
     z-index: -1;
     opacity: .9;
 }
-
 .headings{
     font-family: century;
     font-size: 3rem;
     text-align: center;
     margin: 40px 0px;
 }
-
 .btn-cover{
     padding: 10px 35px;
     margin-top: 10px;
@@ -70,8 +60,8 @@ body{
     outline: none;
     box-shadow:0 10px 10px black ;
 }
-
 .btn-cover:hover{
+    color: #000000 !important;
     cursor:pointer;
     background-color: white;
     counter-reset: black;
@@ -166,7 +156,6 @@ box-shadow: -31px 31px 0px -11px rgba(0,0,0,0.37);
     justify-content: center;
     justify-content: space-around;
 }
-
 .service-parent .ch{
     background-color: #f7f7f7;
     text-align: center;
@@ -178,7 +167,6 @@ box-shadow: -31px 31px 0px -11px rgba(0,0,0,0.37);
     border-bottom: 10px #66c2cd solid;
     overflow: hidden;
 }
-
 .service-parent .ch:hover{
     cursor: pointer;
     transform: scale(1.05);
@@ -186,7 +174,6 @@ box-shadow: -31px 31px 0px -11px rgba(0,0,0,0.37);
     }
 
 .service-parent .ch .ch-name{
-
     padding: 10px;
     background-color: #66c2cd;
     font-family: 'Cinzel', serif;
@@ -214,56 +201,43 @@ box-shadow: -31px 31px 0px -11px rgba(0,0,0,0.37);
     margin-bottom: 100px;
     margin-top: 120px;
 }
-
 .Qualification{
     width: 80%;
     margin: auto;
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    
 }
 .Qualification .qua-ch{
-    margin: 20px;
+    margin: 10px;
     text-align: center;
     height: 600px;
-   
 }
-
-
 .ch2{
     width: 60%;
     display: grid;
-    grid-template-columns: repeat(1,1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
     row-gap: 20px;
     column-gap: 20px; 
     overflow: hidden;
 }
-
 .Qualification .ch2 div{
     text-align: left;
     width: 100%;
     height: 100%;
     background-color: gray;
     overflow: hidden;
-
     background: rgb(255,255,255);
     background: linear-gradient(29deg, rgba(255,255,255,1) 22%, rgba(110,204,218,1) 100%);
-
     /* background: rgb(4,119,124);
     background: linear-gradient(29deg, rgba(4,119,124,1) 45%, rgba(6,193,237,1) 100%); */
-    
-    border-radius: 0px 200px 200px 0px;
+    /* border-radius: 0px 200px 200px 0px;
     -moz-border-radius: 0px 200px 200px 0px;
     -webkit-border-radius: 0px 200px 200px 0px;
     border: 0px solid #000000;
-    
-    box-shadow: -12px 11px 6px -8px rgba(0,0,0,0.75);
-    
-
+    box-shadow: -12px 11px 6px -8px rgba(0,0,0,0.75); */
 }
-
 .Qualification .ch1 img{
  width: 100%;
  height: 600px;
@@ -271,30 +245,23 @@ box-shadow: -31px 31px 0px -11px rgba(0,0,0,0.37);
  box-shadow: -4px 5px 9px 0px rgba(0,0,0,0.75);
  opacity: .9;
 }
-
 .Qualification .ch2 .ch2-a{
-    
     display: flex;
     justify-content: space-between;
-    width: 70%;
+    /* width: 70%; */
     overflow-wrap: break-word;
 }
-
 .Qualification .ch2 .ch2-b{
-    width: 85%;
+    /* width: 85%; */
 }
-
 .Qualification .ch2 .ch2-c{
-    width: 95%;
+    /* width: 95%; */
 }
-
 .text{
     font-family: 'Cinzel', serif;
 font-family: 'Teko', sans-serif;
-padding: 10px 20px 10px 60px;
-
+padding: 10px 20px 10px 30px;
 }
-
 .text h1{
     font-size: 50px;
 }
@@ -311,30 +278,21 @@ font-weight: bold;
     font-size: 22px;
 }
 
-
-
 /* ----------------projects-------------- */
 .head-proj{
-    
     text-align: center;
     margin-top:100px ;
     font-family: 'Cinzel', serif;
     font-size: 60px;
-    
 }
-
-
 .card-section{
     display: flex;
     margin: auto;
     width: 100%;
     justify-content: center;
     justify-content: space-evenly;
-    
 }
-
 .card{
-    
     background: rgba(255, 255, 255, 0.6) !important;
     margin: 100px 20px;
     padding: 15px;
@@ -344,26 +302,20 @@ font-weight: bold;
     padding: 0;
     box-shadow: 22px -12px 58px -22px rgba(0,0,0,0.81);
 }
-
 .card img{
     width: 290px;
     height: 194PX;
     border-radius:5px ; 
 }
-
 .card:hover{
-
 background-color: rgb(92, 92, 92) !important;
 cursor: pointer;
 transform: scale(1.05);
 color: rgb(255, 255, 255);
 }
-
 .card .proj-text{
 padding: 10px;
 }
-
-
 .btn-proj{
     width: 130px;
     height: 50px;
@@ -378,7 +330,6 @@ padding: 10px;
     box-shadow: 14px 13px 39px -3px rgba(120,119,120,1);
     margin: auto auto 3px auto ;
 }
-
 .btn-proj:hover{
     color: rgb(0, 0, 0) !important;
     cursor:pointer;
@@ -390,7 +341,6 @@ padding: 10px;
 
 /* ------------------testimonial ---------------*/
 .bg{
-
     background: rgb(255,255,255);
     background: linear-gradient(29deg, rgba(255,255,255,1) 22%, rgba(143,211,221,1) 100%);
     overflow: hidden;
@@ -400,7 +350,6 @@ padding: 10px;
     width: 100%;
     margin-top: 100px;
 }
-
 .bg .head-tes{
     font-family: 'Cinzel', serif;
     font-size: 70px;
@@ -408,9 +357,7 @@ padding: 10px;
     margin-top: 100px;
     margin-bottom: -100px;
     color: rgb(0, 0, 0);
-  
 }
-
 .cont-testimonial{
     display: grid;
     margin:200px auto;
@@ -422,24 +369,18 @@ padding: 10px;
     row-gap: 50px;
     column-gap: 50px;
 }
-
 .cont-testimonial .box{
     background-color: rgb(244 251 252);
     padding: 10px;
     box-shadow: 11px 10px 25px -15px rgba(59,59,59,1);
     opacity: .9;
     min-height: 400px;
-
-    
 }
-
 .cont-testimonial .box img{
     width: 40%;
     height: 40%;
     object-fit: contain;
-    
 }
-
 .cont-testimonial .box i{
     margin-bottom: 30px;
 }
@@ -460,17 +401,13 @@ padding: 10px;
     justify-content: space-evenly;
     margin: 100px 0 0 0;
     padding-bottom:100px ;
-
 }
-
 .contact .sec1{
     color: #1d86a3;
     text-align: center;
     font-family:Georgia, 'Times New Roman', Times, serif ;
     margin-left: -100px;
-
 }
-
 .feedback-input {
     color:rgb(0, 0, 0);
     font-family: Helvetica, Arial, sans-serif;
@@ -489,13 +426,11 @@ padding: 10px;
   }
   
   .feedback-input:focus { border:2px solid #51c4eb; }
-  
   textarea {
     height: 150px;
     line-height: 150%;
     resize:vertical;
   }
-  
   .btn-cont {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     width: 60%;
@@ -510,26 +445,19 @@ padding: 10px;
     margin-top:-4px;
     font-weight:700;
   }
-  .btn-cont:hover { background:#47b8dd; }
-
-
+.btn-cont:hover { background:#47b8dd; }
 .contact .sec1 img{
-     
     margin-bottom: 30px;
     width: 300px;
     height: 300px;
     border-radius: 10%;
 }
-
-
 .contact .sec2 img{
     margin: 50px;
     width: 300px;
     height: 300px;
     object-fit: contain;
-    
 }
-
 .contact .sec2 .icon{
    font-size: 25px;
 }
@@ -546,7 +474,6 @@ padding: 10px;
     background-color:#575757;
     color:#ffffff;
   }
-  
   .footer ul {
     padding:0;
     list-style:none;
@@ -555,21 +482,17 @@ padding: 10px;
     line-height:1.6;
     margin-bottom:0;
   }
-  
   .footer li {
     padding:0 10px;
   }
-  
   .footer ul a {
     color:inherit;
     text-decoration:none;
     opacity:0.8;
   }
-  
   .footer ul a:hover {
     opacity:1;
   }
-  
   .footer .copyright {
     margin-top:15px;
     text-align:center;
@@ -595,15 +518,18 @@ padding: 10px;
         
     }
     /* -------- about me -------- */
+
+    .bg-about{
+        height: 1100px;
+    }
         
     .about{
         flex-direction: column;
         width: 100%;
-        
+        padding-top: 80px;
     }
     .about h1{
         font-size: 50px;
-        
     }
     .about .about-text{
         
@@ -611,8 +537,6 @@ padding: 10px;
         font-size: 15px;
         width: 95%;
     }
-
-
     /* ------------- searvices ---------- */
 
     .service-parent{
@@ -622,7 +546,6 @@ padding: 10px;
     .service-parent .ch{
         width: 85%;
         margin-top:10px ;
-
     }
 
     /* ----------- qualification---------- */
@@ -632,33 +555,33 @@ padding: 10px;
     }
 
     .Qualification{
-        width: 100%;
+        width: 88%;
         flex-direction: column;
-        
     }
-
     .Qualification .ch1 img{
-        width: 330px;
+        width: 320px;
     }
-
     .Qualification .ch2{
         width: 100%;
         height: 100%;
     }
-
     .Qualification .text{
         padding-left: 5px;
     }
-
+    
     /* ----------- testimonial ---------- */
 
     .bg{
-
         min-height: 2000px;
     }
     .cont-testimonial{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
+        margin: 200px auto;
+        width: 70%;
+    }
+    .cont-testimonial .box{
+        width: 100%;
     }
 
      /* ----------- contact ---------- */
